fix alignment

--- a/src/heartwalk2020/sass/donation.scss
+++ b/src/heartwalk2020/sass/donation.scss
@@ -292,6 +292,7 @@ div.form-row {
      border-radius: 0;
      width: auto;
      min-width: auto;
+     vertical-align: top;
 }
  .heart-page-main div.donation-level-container {
      background: #515151;
